--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,22 +9,40 @@
 
 
 
-header #site-logo {
+#site-header header #site-logo {
     max-height: 50px;
 }
 
-header .nav-link {
+#site-header header .nav-link {
     position: relative;
 
     color: #333;
 
     font-family: sans-serif;
     font-weight: 600;
+    font-size: .75rem;
+    letter-spacing: 0;
 
     text-transform: uppercase;
 }
-header .nav-link.active {
+#site-header header .nav-link.active {
     color: #0282F9;
 
     box-shadow: inset 0 -5px 0 0 #0282F9;
+}
+
+
+
+
+
+
+
+
+
+
+#jumbotron {
+    height: 33vh;
+    background-image: url('../img/jumbotron.jpg');
+    background-size: cover;
+    background-position: center top;
 }
